force-app/main/default/objects/EYI_REC__c/fields/EYI_Lead_Visit_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_Visit_Confirmed__c</fullName>
    <description>This field stores the count of Lead visit confirmed number which is rolled up from automation</description>
    <label>Lead Visit Confirmed (VC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>