force-app/main/default/objects/EYI_REC__c/fields/EYI_Lead_Visit_Proposed__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_Visit_Proposed__c</fullName>
    <description>This field stores the count of Lead visit proposed number which is rolled up from automation</description>
    <label>Lead Visit Proposed (VP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>