force-app/main/default/objects/EYI_REC__c/fields/EYI_Leasing_Manager__c.field-meta.xml
<CustomField>
    <fullName>EYI_Leasing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leasing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>REC_Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>