force-app/main/default/objects/EYI_REC__c/fields/EYI_Marketing_Approach__c.field-meta.xml
<CustomField>
    <fullName>EYI_Marketing_Approach__c</fullName>
    <label>Marketing Approach</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing &amp; operational approach</fullName>
                <label>Marketing &amp; Operational Approach</label>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Data calling</fullName>
            </value>
            <value>
                <fullName>References</fullName>
            </value>
            <value>
                <fullName>Outdoor Activation</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>