force-app/main/default/objects/EYI_REC__c/fields/EYI_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>