force-app/main/default/objects/EYI_REC__c/fields/EYI_Minority_Indicator__c.field-meta.xml
<CustomField>
    <fullName>EYI_Minority_Indicator__c</fullName>
    <label>Minority Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Micro</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>