force-app/main/default/objects/EYI_REC__c/fields/EYI_Mobile__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mobile__c</fullName>
    <label>REC Primary Mobile Number</label>
    <type>Phone</type>
</CustomField>