force-app/main/default/objects/EYI_REC__c/fields/EYI_MSME__c.field-meta.xml
<CustomField>
    <fullName>EYI_MSME__c</fullName>
    <label>MSME</label>
    <type>Date</type>
</CustomField>