force-app/main/default/objects/EYI_REC__c/fields/EYI_MSME_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_MSME_Number__c</fullName>
    <label>MSME Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>