force-app/main/default/objects/EYI_REC__c/fields/EYI_MSME_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_MSME_Type__c</fullName>
    <label>MSME Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Micro</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>