force-app/main/default/objects/EYI_REC__c/fields/EYI_NRI_Location__c.field-meta.xml
<CustomField>
    <fullName>EYI_NRI_Location__c</fullName>
    <label>NRI Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>