force-app/main/default/objects/EYI_REC__c/fields/EYI_Occupation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Business/Self-Employed</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Housewife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>