force-app/main/default/objects/EYI_REC__c/fields/EYI_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>EYI_Office_Address__c</fullName>
    <label>Office Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>