force-app/main/default/objects/EYI_REC__c/fields/EYI_Organization__c.field-meta.xml
<CustomField>
    <fullName>EYI_Organization__c</fullName>
    <label>Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>