force-app/main/default/objects/EYI_REC__c/fields/EYI_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Organization_Name__c</fullName>
    <label>Organization Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3M</fullName>
            </value>
            <value>
                <fullName>ABB</fullName>
            </value>
            <value>
                <fullName>ACC Limited</fullName>
            </value>
            <value>
                <fullName>Accenture</fullName>
            </value>
            <value>
                <fullName>Addeco India Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>Aditya Brila</fullName>
            </value>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>Airbus</fullName>
            </value>
            <value>
                <fullName>Alltire</fullName>
            </value>
            <value>
                <fullName>Alstom&apos;s</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Amdocs</fullName>
            </value>
            <value>
                <fullName>Anna University</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>Apolo Hospital</fullName>
            </value>
            <value>
                <fullName>Ashokleyland</fullName>
            </value>
            <value>
                <fullName>Aster CMI Hospital</fullName>
            </value>
            <value>
                <fullName>Astra Zeneca</fullName>
            </value>
            <value>
                <fullName>Avaya</fullName>
            </value>
            <value>
                <fullName>Axis</fullName>
            </value>
            <value>
                <fullName>Bank Of New York</fullName>
            </value>
            <value>
                <fullName>Barclays India Pvt ltd</fullName>
            </value>
            <value>
                <fullName>BEML Areospace Division</fullName>
            </value>
            <value>
                <fullName>Bharat Forge</fullName>
            </value>
            <value>
                <fullName>BIAL</fullName>
            </value>
            <value>
                <fullName>Biocon</fullName>
            </value>
            <value>
                <fullName>Bisleri</fullName>
            </value>
            <value>
                <fullName>BNY Mellon</fullName>
            </value>
            <value>
                <fullName>Boeing India Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>Bosch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>