force-app/main/default/objects/EYI_REC__c/fields/EYI_OS_Location__c.field-meta.xml
<CustomField>
    <fullName>EYI_OS_Location__c</fullName>
    <label>OS Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>