force-app/main/default/objects/EYI_REC__c/fields/EYI_PAN_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_PAN_No__c</fullName>
    <label>PAN No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>