force-app/main/default/objects/EYI_REC__c/fields/EYI_Pan_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>EYI_Pan_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pan Uploaded?</label>
    <type>Checkbox</type>
</CustomField>