force-app/main/default/objects/EYI_REC__c/fields/EYI_Panchshil_Master__c.field-meta.xml
<CustomField>
    <fullName>EYI_Panchshil_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pincode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>EYI_Panchshil_Master__c.Master_Type__c</field>
            <operation>equals</operation>
            <value>Pincode</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EYI_Panchshil_Master__c</referenceTo>
    <relationshipLabel>REC Accounts</relationshipLabel>
    <relationshipName>REC_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>