force-app/main/default/objects/EYI_REC__c/fields/EYI_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15 Days from Bill received</fullName>
                <default>true</default>
                <label>15 Days from Bill received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>