force-app/main/default/objects/EYI_REC__c/fields/EYI_Phone__c.field-meta.xml
<CustomField>
    <fullName>EYI_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>