force-app/main/default/objects/EYI_REC__c/fields/EYI_Pincode_Office__c.field-meta.xml
<CustomField>
    <fullName>EYI_Pincode_Office__c</fullName>
    <label>Correspondence 2 Pincode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>