force-app/main/default/objects/EYI_REC__c/fields/EYI_Primary_Mob_No_with_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Primary_Mob_No_with_Country_Code__c</fullName>
    <formula>EYI_Country_Code__c &amp; EYI_Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Mob No with Country Code</label>
    <type>Text</type>
</CustomField>