force-app/main/default/objects/EYI_REC__c/fields/EYI_Primary_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Primary_Telephone_Number__c</fullName>
    <label>Primary Telephone Number</label>
    <type>Phone</type>
</CustomField>