force-app/main/default/objects/EYI_REC__c/fields/EYI_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Product_Type__c</fullName>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Bungalow</fullName>
                <isActive>false</isActive>
                <label>Bungalow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>