force-app/main/default/objects/EYI_REC__c/fields/EYI_Purchasing_Group__c.field-meta.xml
<CustomField>
    <fullName>EYI_Purchasing_Group__c</fullName>
    <label>Purchasing Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Purch Org</fullName>
            </value>
            <value>
                <fullName>Constrn. POrg, Pune</fullName>
            </value>
            <value>
                <fullName>FM POrg, Pune</fullName>
            </value>
            <value>
                <fullName>HR/IT/AC ADMIN</fullName>
            </value>
            <value>
                <fullName>Interior POrg, Pune</fullName>
            </value>
            <value>
                <fullName>Service POrg, Pune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>