force-app/main/default/objects/EYI_REC__c/fields/EYI_Real_Estate_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Real_Estate_Project_Status__c</fullName>
    <label>Real Estate Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>