force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Account_Status__c</fullName>
    <label>REC Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Created</fullName>
                <default>true</default>
                <label>Account Created</label>
            </value>
            <value>
                <fullName>KYC Completed</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>