force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Approval_Status__c</fullName>
    <label>REC Registration Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved by Sourcing Head</fullName>
            </value>
            <value>
                <fullName>Approved by Sourcing TL</fullName>
            </value>
            <value>
                <fullName>Rejected by Sourcing TL</fullName>
            </value>
            <value>
                <fullName>Rejected by Sourcing Head</fullName>
            </value>
            <value>
                <fullName>Approved by Finance Executive</fullName>
            </value>
            <value>
                <fullName>Rejected by Finance Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>