force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Beat__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Beat__c</fullName>
    <label>REC Beat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kharadi</fullName>
            </value>
            <value>
                <fullName>Kharadi - Shivajinagar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>