force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Code__c</fullName>
    <displayFormat>REC - {00000}</displayFormat>
    <label>REC Code</label>
    <type>AutoNumber</type>
</CustomField>