force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Company_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Company_GSTIN__c</fullName>
    <label>REC Company GSTIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>