force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Company_Location__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Company_Location__c</fullName>
    <label>REC Company Location</label>
    <type>TextArea</type>
</CustomField>