force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Company_PAN__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Company_PAN__c</fullName>
    <label>REC Company PAN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>