force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Correspondence_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Correspondence_Contact_Name__c</fullName>
    <label>Correspondence 1 First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>