force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Correspondence_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Correspondence_Email_ID__c</fullName>
    <label>Correspondence 1 Email</label>
    <type>Email</type>
</CustomField>