force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Correspondence_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Correspondence_Last_Name__c</fullName>
    <label>Correspondence 1 Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>