force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Correspondence_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Correspondence_Mobile_Number__c</fullName>
    <label>Correspondence 1 Mobile Number</label>
    <type>Phone</type>
</CustomField>