force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Current_Status__c</fullName>
    <label>REC Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAT A</fullName>
            </value>
            <value>
                <fullName>CAT B</fullName>
            </value>
            <value>
                <fullName>CAT C</fullName>
            </value>
            <value>
                <fullName>CAT D</fullName>
                <default>true</default>
                <label>CAT D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>