force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Firm_Address_1__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Firm_Address_1__c</fullName>
    <inlineHelpText>Office/House No</inlineHelpText>
    <label>Address Line 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>