force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Firm_Address_3__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Firm_Address_3__c</fullName>
    <inlineHelpText>Landmark</inlineHelpText>
    <label>Address Line 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>