force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Firm_Address__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Firm_Address__c</fullName>
    <label>REC Firm Address</label>
    <type>Address</type>
</CustomField>