force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Firm_City__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Firm_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>EYI_City__c</referenceTo>
    <relationshipLabel>REC Accounts (REC Firm City)</relationshipLabel>
    <relationshipName>REC_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>