force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Firm_Location__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Firm_Location__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
                <default>true</default>
                <label>India</label>
            </value>
            <value>
                <fullName>Overseas</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
                <isActive>false</isActive>
                <label>Indian</label>
            </value>
            <value>
                <fullName>NRI</fullName>
                <isActive>false</isActive>
                <label>NRI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>