force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Firm_Name__c</fullName>
    <inlineHelpText>REC RERA Registered Firm Name</inlineHelpText>
    <label>RERA Registered Firm Name / Firm Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>