force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Firm_Website__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Firm_Website__c</fullName>
    <label>Firm Website</label>
    <length>80</length>
    <type>Text</type>
</CustomField>