force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Full_Name__c</fullName>
    <formula>EYI_First_Name__c +&apos; &apos;+ EYI_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REC Full Name</label>
    <type>Text</type>
</CustomField>