force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Hobbies_and_Interests__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Hobbies_and_Interests__c</fullName>
    <label>Hobbies and Interests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>