force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Owner_Details__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Owner_Details__c</fullName>
    <formula>&quot;Name: &quot; &amp;  Owner:User.MobilePhone  &amp; &apos;, &apos; &amp;
&quot;Title: &quot; &amp;  Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REC Owner Details</label>
    <type>Text</type>
</CustomField>