force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Owner_Email__c</fullName>
    <label>REC Owner Email</label>
    <type>Email</type>
</CustomField>