force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Owner_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Owner_Mobile_Number__c</fullName>
    <label>REC Owner Mobile Number</label>
    <type>Phone</type>
</CustomField>