force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Status__c</fullName>
    <label>REC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
                <isActive>false</isActive>
                <label>Registered</label>
            </value>
            <value>
                <fullName>Un-registered</fullName>
                <isActive>false</isActive>
                <label>Un-registered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>