force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Team_Size__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Team_Size__c</fullName>
    <label>Team Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>